Map/Properties - prevent input flicker / Map - Fix save button / Save map on fill

--- a/code13/app/client/mgb.css
+++ b/code13/app/client/mgb.css
@@ -142,7 +142,10 @@ body.dragging .accept-drop:hover{
 .compact > label .title{
   padding: 0.1em;
 }
-
+.compact > .ui.accordion.array.content {
+  padding: 0 10px;
+}
+/* end of map editor properties */
 /* semantic hacks */
 .icon.flip{
   transform: scaleX(-1);
